--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
     
-    <header class="site-navbar" role="banner">
+    <header class="site-navbar bg-light" role="banner">
       <div class="container-fluid">
         <div class="row align-items-center">
           
@@ -126,11 +126,6 @@
 
     <div class="site-footer">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-4">
-            <h3 class="footer-heading mb-4">About Us</h3>
-          </div>
-        </div>
         <div class="row">
           <div class="col-12 text-center">
             <p>
@@ -251,10 +246,12 @@
           let publishedAt = res[i].publishedAt;
           let source = res[i].source;
 
+          let news_link = `/news_page?id=${url}`;
+
           const news_element =
           `<div class="col-lg-4 mb-4" >
             <div class="entry2">
-                <a href="${url}"><img src="${img_url}" onerror="this.src='https://cdn.browshot.com/static/images/not-found.png';" alt="Image" class="img-fluid rounded"></a>
+                <a href="${news_link}"><img src="${img_url}" onerror="this.src='https://cdn.browshot.com/static/images/not-found.png';" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                   <span class="post-category text-white bg-secondary mb-3">Politics</span>
                   <h2><a href="${url}">${title}</a></h2>
