--- a/templates/index.html
+++ b/templates/index.html
@@ -255,7 +255,7 @@
                 <a href="${news_link}"><img src="${img_url}" onerror="this.src='https://cdn.browshot.com/static/images/not-found.png';" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                   <span class="post-category text-white bg-secondary mb-3">Politics</span>
-                  <h2><a href="${url}">${title}</a></h2>
+                  <h2><a href="${news_link}">${title}</a></h2>
                   <div class="post-meta align-items-center text-left clearfix">
                     <figure class="author-figure mb-0 mr-3 float-left">From ${source}</figure>
                     <span>-&nbsp; At ${publishedAt}</span>
