update to save news into db in cron job.

--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,7 @@
       var state_focus = '';
 
       $.ajax({
-        url: '/today_usa_data',
+        url: '/api/today_usa_data',
         type: 'GET',
         method: 'GET',
         dataType: 'json',
@@ -232,7 +232,7 @@
 <!--      ```-->
 
       $.ajax({
-        url: '/news?q=coronavirus ',
+        url: '/api/news?q=coronavirus ',
         type: 'GET',
         method: 'GET',
         dataType: 'json',
