--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Preview - {{news.title}}</title>
+  <title>{{news.title}}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
