add meta description and keywords in the pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <title>Dashboard for Monitoring CoronaVirus in the U.S.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Trace404 provides real time data dashboard to monitor
+    coronavirus in the United State and the world.
+    You can also read Corresponding news regarding coronavirus in your home state!">
+    <meta name="keywords" content="coronavirus, COVID-19, news, dashboard, data visualization">
 
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
 
@@ -45,7 +50,7 @@
           </div>
 
           <div class="col-4 site-logo">
-            <a href="/" class="text-black h2 mb-0">404Trace!</a>
+            <a href="/" class="text-black h2 mb-0">Trace404</a>
             <small class="d-none d-sm-inline">CoronaVirus in the U.S.</small>
           </div>
 
