--- a/templates/post.html
+++ b/templates/post.html
@@ -5,6 +5,8 @@
   <title>{{news.title}}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="{{news.description}}">
+  <meta name="keywords" content="coronavirus, COVID-19, news, dashboard, data visualization">
 
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
   <!-- Bootstrap core CSS -->
@@ -41,7 +43,7 @@
           </div>
 
           <div class="col-4 site-logo">
-            <a href="/" class="text-black h2 mb-0">404Trace!</a>
+            <a href="/" class="text-black h2 mb-0">Trace404</a>
             <small class="d-none d-sm-inline">CoronaVirus in the U.S.</small>
           </div>
 
