--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     You can also read Corresponding news regarding coronavirus in your home state!">
     <meta name="keywords" content="coronavirus, COVID-19, news, dashboard, data visualization">
 
+    <link rel="icon" href="/static/images/logo.png">
+
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
 
     <link rel="stylesheet" href="/static/fonts/icomoon/style.css">
@@ -50,7 +52,8 @@
           </div>
 
           <div class="col-4 site-logo">
-            <a href="/" class="text-black h2 mb-0">Trace404</a>
+            <img src="/static/images/logo.png" class="logo">
+            <a href="#" class="navbar-left text-black h2 mb-0 d-none d-sm-inline">Trace404</a>
             <small class="d-none d-sm-inline">CoronaVirus in the U.S.</small>
           </div>
 
